<resources>
    <string name="app_name">FarmStats</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="error_string">Field must not be empty</string>
    <string name="home">Home</string>
    <string name="farmers">Farmers</string>
    <string name="farms">Farms</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="farmer">FARMER</string>
    <string name="farm">FARM</string>
    <string name="statistics">STATISTICS</string>
    <string name="create_farmer_helper_text">You can create a new farmer to populate the database</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">SAVE</string>
    <string name="farmer_name">Adejobi Omogbolahan</string>
    <string name="farmer_address">Number 10, Oke-Ayo, Lagos, Nigeria</string>
    <string name="farmer_phone">09012345678</string>
    <string name="farm_name">Farm Name</string>
    <string name="farm_location">Farm Location</string>
    <string name="select_a_farmer">Select a farmer:</string>
    <string name="title_activity_maps">Map</string>
    <string name="choose_farm_boundaries">Choose farm boundaries on the map</string>
    <string name="farm_name_">Farm Name:</string>
    <string name="farm_location_">Farm Location:</string>
    <string name="farm_owner">Farm Owner:</string>
    <string name="name">Name</string>
</resources>
