<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_gravity="center_horizontal"
    android:layout_margin="16dp"
    android:clickable="true"
    android:focusable="true"
    android:minHeight="200dp"
    app:cardBackgroundColor="@color/colorPrimaryLight"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:weightSum="2">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/single_farmer_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:padding="4dp"
                android:text="@string/farmer_name"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/single_farmer_address_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:padding="4dp"
                android:text="@string/farmer_address"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp"
                app:fontFamily="@font/roboto" />

            <TextView
                android:id="@+id/single_farmer_phone_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="4dp"
                android:text="@string/farmer_phone"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp"
                app:fontFamily="@font/roboto" />

        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/single_farmer_image_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/undraw_male_avatar" />
    </LinearLayout>


</androidx.cardview.widget.CardView>