<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/statistics"
                android:textColor="@color/colorPrimaryText"
                android:textSize="24sp"
                app:fontFamily="@font/roboto" />

            <androidx.cardview.widget.CardView
                android:id="@+id/statistics_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:clickable="true"
                android:focusable="true"
                android:minHeight="200dp"
                app:cardBackgroundColor="@color/colorPrimaryLight"
                app:cardCornerRadius="20dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/farmer"
                android:textColor="@color/colorPrimaryText"
                android:textSize="24sp"
                app:fontFamily="@font/roboto" />

            <androidx.cardview.widget.CardView
                android:id="@+id/create_farmer_card"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:clickable="true"
                android:focusable="true"
                android:minHeight="200dp"
                app:cardBackgroundColor="@color/colorPrimaryLight"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">


                    <LinearLayout
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/farmer"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/create_farmer_helper_text"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="14sp"
                            app:fontFamily="@font/roboto" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_undraw_active_options" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/farm"
                android:textColor="@color/colorPrimaryText"
                android:textSize="24sp"
                app:fontFamily="@font/roboto" />

            <androidx.cardview.widget.CardView
                android:id="@+id/create_farm_card"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:clickable="true"
                android:focusable="true"
                android:minHeight="200dp"
                app:cardBackgroundColor="@color/colorPrimaryLight"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/farm"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/create_farmer_helper_text"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="14sp"
                            app:fontFamily="@font/roboto" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_undraw_coming_home" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</FrameLayout>