<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/new_farmer_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/new_farmer_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationIcon="@drawable/ic_close_black_24dp" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_margin="15dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/farmer_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/undraw_male_avatar"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="5dp"
                    android:drawableStart="@drawable/ic_format_size_black_24dp"
                    android:drawablePadding="25dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/first_name"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    app:fontFamily="@font/roboto" />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/farmerFirstNameTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:hint="@string/first_name"
                    app:counterEnabled="false"
                    app:errorEnabled="true"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/farmerFirstNameInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="5dp"
                    android:drawableStart="@drawable/ic_format_size_black_24dp"
                    android:drawablePadding="25dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/last_name"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    app:fontFamily="@font/roboto" />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/farmerLastNameTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:hint="@string/last_name"
                    app:counterEnabled="false"
                    app:errorEnabled="true"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/farmerLastNameInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="5dp"
                    android:drawableStart="@drawable/ic_home_black_24dp"
                    android:drawablePadding="25dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/address"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    app:fontFamily="@font/roboto" />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/farmerAddressTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:hint="@string/address"
                    app:counterEnabled="false"
                    app:errorEnabled="true"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/farmerAddressInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="5dp"
                    android:drawableStart="@drawable/ic_phone_black_24dp"
                    android:drawablePadding="25dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/phone_number"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    app:fontFamily="@font/roboto" />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/farmerPhoneNumberTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:hint="@string/phone_number"
                    app:counterEnabled="false"
                    app:errorEnabled="true"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/farmerPhoneNumberInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/save_farmer_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/save" />

            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</layout>
